<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/sign_in_with_your_phone_number."
            android:textSize="21sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="start"
            android:text="@string/collab_will_send_otp_to_verify_your_phone_number_enter_country_code_and_phone_number"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/countrycode"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:autofillHints="Country code"
                android:inputType="phone"
                android:text="@string/_91"/>

            <EditText
                android:id="@+id/phone"
                android:inputType="phone"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number" />
        </LinearLayout>

        <Button
            android:id="@+id/sendotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/butt_shape"
            android:text="@string/send_otp"/>

        <EditText
            android:id="@+id/otp"
            android:layout_width="150dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enter_otp_here"
            android:inputType="phone"
            android:gravity="center" />
        <Button
            android:id="@+id/verify"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/butt_shape"
            android:text="@string/verify"/>
    </LinearLayout>

</ScrollView>