<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Info"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:theme="@style/AppTheme"
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">
            <androidx.appcompat.widget.Toolbar
                app:title="@string/app_name"
                android:id="@+id/toolbar_info"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:titleTextColor="@color/white"/>
        </com.google.android.material.appbar.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/select_image"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:src="@color/white"
                        android:layout_margin="20dp"
                        android:layout_gravity="center"/>
                    <ImageView
                        android:id="@+id/choose_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/ic_add_image"
                        android:layout_gravity="center"/>
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/this_name_is_temporary"/>
                <EditText

                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:id="@+id/temp_name"
                    android:textColorHint="#808080"
                    android:textColor="@color/white"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/the_name_you_love"
                    android:autofillHints=""
                    android:inputType="textPersonName" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
   <ProgressBar
       android:id="@+id/info_progress"
       android:visibility="invisible"
       android:layout_gravity="center|bottom"
       android:layout_width="60dp"
       android:layout_marginBottom="70dp"
       android:layout_height="60dp"/>
</FrameLayout>